Modified Gemfile DBs

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -2,5 +2,5 @@
 <ul>
     <li>Item 1</li>
     <li>Yep Yep Yep</li>
-    <li> <%= link_to  'Home Page', root_pathc %> </li>
+    <li> <%= link_to  'Home Page', root_path %> </li>
 </ul>
