added delete and partials

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -4,4 +4,5 @@
     <li>Will explore rails and its benefits</li>
     <li>JK we will have fun =P</li>
     <li> <%= link_to  'About Page', about_path %> </li>
+    <li> <%=link_to 'Alpha Blog', articles_path %> </li>
 </ul>
