--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,8 +1,5 @@
-<h1>Welcomeeeeeeeeee</h1>
-<h2>This is my first rails application</h2>
-<ul>
-    <li>Will explore rails and its benefits</li>
-    <li>JK we will have fun =P</li>
-    <li> <%= link_to  'About Page', about_path %> </li>
-    <li> <%=link_to 'Alpha Blog', articles_path %> </li>
-</ul>
+<div class="cust-center jumbotron">
+  <h1>Alpha Blog</h1>
+  <p> Welcome to the best Blog in the Web </p>
+  <p> <%= link_to "Sign Up Now", "", class: "btn btn-primary btn-lg" %> </p>
+</div>
