--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,14 +1,5 @@
+<%= render "shared/errors", obj: @article%>
 
-
-<% if @article.errors.any? %>
-<h3>The Following Errors prevented the article from getting created</h3>
-<ul>
-    <% @article.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end  %>
-</ul>
-<% end %>
-        
  <div class="row">
     <div class="col-xs-12">       
         <%= form_for(@article, :html => {class:"form-horizontal", role: "form"}) do |f| %>
