--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,11 @@ $navbar-default-bg: #1755b7;
     text-align: center;
 }
 
+.article-actions{
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -29,3 +34,4 @@ $navbar-default-bg: #1755b7;
   height: 30px;
   background-color: #f5f5f5;
 }
+
