--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,12 +22,23 @@ $navbar-default-bg: #1755b7;
 }
 
 .article-actions{
-    border-top: 1px solid #eaeaea;
+    /*border-top: 1px solid #eaeaea;*/
     padding-top: 5px;
 }
 
+.article-title{
+    font-weight: bold;
+    font-size: 1.5em;    
+}
+
+.article-body{
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
 .footer {
-  position: absolute;
+  /*position: absolute;*/
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
