--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,6 @@
 </div>
 
 <%= render 'layouts/footer' %>
-
+<%= debug(params) if Rails.env.development? %> <!-- to show info bottom page -->
 </body>
 </html>
