--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 </div>
 
 <%= render 'layouts/footer' %>
-<%= debug(params) if Rails.env.development? %> <!-- to show info bottom page -->
+
+  <!-- debug(params) if Rails.env.development?%>  to show info bottom page -->
 </body>
 </html>
