--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,3 +51,8 @@ $navbar-default-bg: #1755b7;
   height: 30px;
   background-color: #f5f5f5;
 }
+
+.listing{
+    list-style: none;
+    padding-left: 0;
+}
