--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <h1 align="enter"> All Alpha Boggers </h1>
 
 <div align="center">
+    <%= will_paginate @users%>
+    
     <% @users.each do |user| %>
         <ul class="listing">
             <div class="row">
@@ -14,4 +16,6 @@
             </div>
         </ul>
     <% end %>
+    
+    <%= will_paginate @users%>
 </div>
