--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -17,13 +17,17 @@
                     </small>
                 </div>
             </div>
-            <div class="article-actions"> 
-                <%= link_to "Edit", edit_article_path(article), class:"btn btn-xs btn-primary" %>
-                <%= link_to "Delete", article_path(article), 
-                                    method: :delete, 
-                                    data: {confirm: "Do you really wanna delete it?"}, 
-                                    class: "btn btn-xs btn-danger" %>
-            </div>
+            <!--we only want users whi created he article to have access to these actions -->
+            
+            <% if logged_in && current_user == article.user %>
+                <div class="article-actions"> 
+                    <%= link_to "Edit", edit_article_path(article), class:"btn btn-xs btn-primary" %>
+                    <%= link_to "Delete", article_path(article), 
+                                        method: :delete, 
+                                        data: {confirm: "Do you really wanna delete it?"}, 
+                                        class: "btn btn-xs btn-danger" %>
+                </div>
+            <% end %>
         </div>
     </div>
 </div>
