--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,11 +22,13 @@
         
         <div class="article-actions">
             <%= link_to "View All Articles", articles_path, class: "btn btn-xs btn-success" %> 
-            <%= link_to "Edit", edit_article_path(@article), class:"btn btn-xs btn-primary" %>
-            <%= link_to "Delete", article_path(@article), 
-                                method: :delete, 
-                                data: {confirm: "Do you really wanna delete it?"}, 
-                                class: "btn btn-xs btn-danger" %>
+            <% if logged_in && current_user == @article.user %>
+                <%= link_to "Edit", edit_article_path(@article), class:"btn btn-xs btn-primary" %>
+                <%= link_to "Delete", article_path(@article), 
+                                    method: :delete, 
+                                    data: {confirm: "Do you really wanna delete it?"}, 
+                                    class: "btn btn-xs btn-danger" %>
+            <% end %>
         </div>
         
     </div>
