--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,5 @@
 <div class="cust-center jumbotron">
   <h1>Alpha Blog</h1>
   <p> Welcome to the best Blog in the Web </p>
-  <p> <%= link_to "Sign Up Now", "", class: "btn btn-primary btn-lg" %> </p>
+  <p> <%= link_to "Sign Up Now", signup_path , class: "btn btn-primary btn-lg" %> </p>
 </div>
