--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -19,7 +19,7 @@
             </div>
             <!--we only want users whi created he article to have access to these actions -->
             
-            <% if logged_in && current_user == article.user %>
+            <% if logged_in && (current_user == article.user  || current_user.admin?) %>
                 <div class="article-actions"> 
                     <%= link_to "Edit", edit_article_path(article), class:"btn btn-xs btn-primary" %>
                     <%= link_to "Delete", article_path(article), 
