--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,7 +22,7 @@
         
         <div class="article-actions">
             <%= link_to "View All Articles", articles_path, class: "btn btn-xs btn-success" %> 
-            <% if logged_in && current_user == @article.user %>
+            <% if logged_in && (current_user == @article.user || current_user.admin?) %>
                 <%= link_to "Edit", edit_article_path(@article), class:"btn btn-xs btn-primary" %>
                 <%= link_to "Delete", article_path(@article), 
                                     method: :delete, 
